cli/tests/snapshot/inputs/errors/let_rec_block_with_pat.ncl
# capture = 'stderr'
# command = ['eval']
let rec
  a = 2,
  { b } = { b = 1 }
in
b
